--- a/sass/single-form-setting.scss
+++ b/sass/single-form-setting.scss
@@ -373,7 +373,6 @@
 								.srfm-modal-row-data {
 									align-self: stretch;
 									align-items: center;
-									height: 40px;
 									&.odd {
 										background: #f6f7f7;
 									}
